Initial routing file setup

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
   <body>
 
     <div class="hero-unit">
-        <form id="form">
+        <form id="formID">
             <header id="header">
              
                 <h1>myBlog</h1>
@@ -34,7 +34,7 @@
                 </div>
 
 
-                <p>Publish Date:<!--  <script type="text/javascript">$.now()</script> --></p>
+             <!--    <p>Publish Date: <script type="text/javascript">$.now()</script></p> -->
 
                 <input id="title" placeholder="Blog post title..." autofocus="">
                 
@@ -87,9 +87,9 @@
         <!-- build:js scripts/main.js -->
         <script src="scripts/models/post_model.js"></script>
         <script src="scripts/collections/post_collection.js"></script>
+        <script src="scripts/templates.js"></script>
         <script src="scripts/views/list_view.js"></script>
         <script src="scripts/main.js"></script>
-        <script src="scripts/templates.js"></script>
         <!-- endbuild -->
 </body>
 </html>
