Progression with routes

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,11 @@
         </form>
     </div>
 
+    <div class="fullpost-unit">
+        <ul></ul>
+    </div>
+
+
 
     <!--<script type="text/x-handlebars-template" id="feed_template">
     // // The each block helper: You can iterate over a list using the built-in each helper. Inside the block, you can use this to reference the element being iterated over.
