Fixes to views/routes

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 
 
 
-                <input id="content" placeholder="Write your post..." autofocus="">
+                <textarea id="content" placeholder="Write your post..." autofocus=""></textarea>
                 
                 <input id="author" placeholder="Author name..." autofocus="">
 
