--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
         <script src="scripts/collections/post_collection.js"></script>
         <script src="scripts/templates.js"></script>
         <script src="scripts/views/list_view.js"></script>
+        <script src="scripts/routes/router.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
