--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,10 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+
+    <!-- Parse Library -->
+    <script src="//www.parsecdn.com/js/parse-1.2.19.min.js"></script>
+
   </head>
   <body>
 
@@ -53,7 +57,8 @@
     </div>
 
   
-  
+    <div class="zombie_cont"></div>
+
 
 
     <div class="full_post">
@@ -65,8 +70,8 @@
     <script type="text/x-handlebars-template" id="post_feed">
         {{#each posts}}
             <li>
-                <div id="{{_id}}" class="delete"><span class="octicon octicon-x"></span></div>
-                <a href="#" id="{{_id}}" class="post_title">{{ title }}</a>
+                <div id="{{ objectId }}" class="delete"><span class="octicon octicon-x"></span></div>
+                <a href="#" id="{{ objectId }}" class="post_title">{{ title }}</a>
                 <p>{{ content }}</p>
                 <small>{{ author }}</small>
                 <small>{{ date }}</small>
@@ -81,7 +86,7 @@
         <div class="lamp_solo"><img src="images/icon_60666.svg" /></div>
 
         <li>
-            <h2 id="{{_id}}">{{ title }}</h2>
+            <h2 id="{{ objectId }}">{{ title }}</h2>
             <p class="full">{{ content }}</p>
             <div class="boiler">
                 <small class="full">{{ author }}</small>
