Trialing back button fix

--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,9 @@
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
-    <!-- Parse Library -->
+    <!-- Parse Library --> 
     <script src="//www.parsecdn.com/js/parse-1.2.19.min.js"></script>
-
+    <!-- NOTE: PARSE USES AN OLDER VERSION OF BACKBONE, BUT WE CAN STILL CALL CURRENT BELOW.-->
   </head>
   <body>
 
