Refactoring working in home view

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,12 @@
   </head>
   <body>
 
+    <a href="/#" class="home logged_in">HOME</a>
+
+    <a href="#" class="logout logged_in">LOG OUT</a>
+
+    <div class="profile logged_in"></div>
+
     <div class="hero-unit">
         <form id="formID">
             <header id="header">
@@ -56,10 +62,8 @@
         </form>
     </div>
 
-  
+
     <div class="zombie_cont"></div>
-
-
 
     <div class="full_post">
         <ul></ul>
@@ -97,6 +101,30 @@
        
     </script>
 
+<div class="validation_forms">
+
+    <!-- SIGN-UP + LOG-IN TEMPLATE -->
+    <script type='text/x-handlebars-template' id='val_template'>
+
+        <form id="signupForm">
+            <h1>Create a new <br><span class="commentary">(fake)</span> account.</h1>
+            <input id="signup_username" placeholder="Choose a username..." autofocus="">
+            <input input type="password" id="signup_password" placeholder="Choose a password..." autofocus="">
+            <input id="signupBtn" type="submit" value="Sign up">
+        </form>
+    </script>
+
+    <!-- SIGN-UP + LOG-IN TEMPLATE -->
+    <script type='text/x-handlebars-template' id='val_template'>
+        <form id="loginForm">
+            <h3>Login to your <span class="commentary">(also fake)</span> account.</h3>
+            <input id="login_username" placeholder="Username" autofocus="">
+            <input input type="password" id="login_password" placeholder="Password" autofocus="">
+            <input id="loginBtn" type="submit" value="Login">
+        </form>
+
+    </script>
+</div>
 <!--     <div class="zippo"><img src="images/icon_1426.svg" /></div>
  -->
 
@@ -122,6 +150,7 @@
         <!-- build:js scripts/main.js -->
         <script src="scripts/models/post_model.js"></script>
         <script src="scripts/collections/post_collection.js"></script>
+        <script src="scripts/views/validation_view.js"></script>
         <script src="scripts/views/list_view.js"></script>
         <script src="scripts/views/post_single_view.js"></script>
         <script src="scripts/routes/blog_router.js"></script>
